fix(tests): improve tests robustness (#3453)